tests/neg/infer-poly.stk
// Check that type inference of result type does not discard errors
fun main =
  val g = x => x   // error
